# pydownloader

./: LICENSE  pyproject.toml  tasks.json  tasks.yaml
src/pydownloader/: __init__.py  downloader.py
